demo-example-1/kube_configs/serviceb.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: b
  name: b
  namespace: argoapps
  generation: 1
  annotations:
    deployment.kubernetes.io/revision: '1'
spec:
  replicas: 1
  selector:
    matchLabels:
      name: b
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: b
        name: b
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - env:
            - name: SPRING_APPLICATION
              valueFrom:
                configMapKeyRef:
                  name: service-b-config
                  key: application.yml
          name: service-b
          image: 'argo-serviceb:v1'
          ports:
            - containerPort: 8082
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 256Mi
          volumeMounts:
            - mountPath: /deployments/config/
              name: application-config
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
        - name: default-secret
      dnsPolicy: ClusterFirst
      securityContext: { }
      schedulerName: default-scheduler
      volumes:
        - name: application-config
          configMap:
            name: service-b-config
            items:
              - key: application.yml
                path: application.yml
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 120
status:
  observedGeneration: 1
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2022-05-12T14:00:28Z'
      lastTransitionTime: '2022-05-12T14:00:28Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2022-05-12T14:00:28Z'
      lastTransitionTime: '2022-05-12T14:00:18Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "b-5dccc9b6b6" has successfully progressed.
---
kind: Service
apiVersion: v1
metadata:
  name: b
  namespace: argoapps
spec:
  ports:
    - name: http-8082
      port: 8082
      protocol: TCP
      targetPort: 8082
    - name: http-8081
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: b
  type: ClusterIP
status:
  loadBalancer: { }
