demo-example-1/kube_configs/servicec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argoapps-app-c
  namespace: argoapps
  labels:
#    app: app-c
    app.kubernetes.io/component: app-c
    app.kubernetes.io/name: argoapps-app-c
    app.kubernetes.io/part-of: argoapps
    app.kubernetes.io/version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argoapps-app-c
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argoapps-app-c
#        app: app-c
#        app.kubernetes.io/version: 1.0.0
#      annotations:
#        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - env:
            - name: SPRING_APPLICATION
              valueFrom:
                configMapKeyRef:
                  name: service-c-config
                  key: application.yml
          name: argoapps-app-c
          image: 'argo-servicec:1.0.0'
          ports:
            - containerPort: 8083
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 256Mi
          volumeMounts:
            - mountPath: /deployments/config/
              name: application-config
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
#      imagePullSecrets:
#        - name: default-secret
      dnsPolicy: ClusterFirst
      securityContext: { }
      schedulerName: default-scheduler
      volumes:
        - name: application-config
          configMap:
            name: service-c-config
            items:
              - key: application.yml
                path: application.yml
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  name: argoapps-app-c
  namespace: argoapps
  labels:
#    app: app-c
    app.kubernetes.io/component: app-c
    app.kubernetes.io/name: argoapps-app-c
    app.kubernetes.io/part-of: argoapps
    app.kubernetes.io/version: 1.0.0
spec:
  ports:
    - name: http-8084
      port: 8084
      protocol: TCP
      targetPort: 8084
    - name: http-8083
      port: 8083
      protocol: TCP
      targetPort: 8083
    - name: http-8085
      port: 8085
      protocol: TCP
      targetPort: 8085
    - name: http-8081
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app.kubernetes.io/name: argoapps-app-c
#    app: app-c
  type: ClusterIP
